# md5_measure_app

./: .env.default  README.md  docker-compose.backend.dev.yml  docker-compose.dev.yml  docker-compose.frontend.dev.yml  pyproject.toml
backend/: Dockerfile  Makefile  README.md  pyproject.toml
backend/src/: main.py  settings.py
backend/src/db/: database.py  dependencies.py  events.py  models.py
backend/src/db/respositories/: files_hash_record.py
backend/src/handlers/: __init__.py  files.py
backend/src/schemas/: files.py
backend/src/worker/: celery_api.py  dependencies.py
backend/tests/: conftest.py  test_handlers.py
backend/tests/data/: dummy_file.txt
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: FileUpload.js
postgres/: Dockerfile  dev_files_hash_record.sql
worker/: Dockerfile  Makefile  README.md  pyproject.toml
worker/src/: __init__.py  settings.py  setup_logging.py  worker.py
worker/tests/: test_worker.py
