[tool.poetry]
name = "hash_computer_worker"
version = "0.0.1"
description = "Celery worker who calculates hashes"
authors = ["Sergey Chudov <chudov42@gmail.com>"]
license = "MIT"

readme = "README.md"
homepage = "https://github.com/WindowGenerator/md5_measure_app"
repository = "https://github.com/WindowGenerator/md5_measure_app"
documentation = "https://github.com/WindowGenerator/md5_measure_app"

[tool.poetry.dependencies]
python = "^3.8"
celery = "^5.2.6"
redis = "^4.3.1"
pydantic = "^1.9.1"


[tool.poetry.dev-dependencies]
isort = "^5.10.1"
pre-commit = "^2.19.0"
pytest = "^7.1.2"

[tool.isort]
line_length = 88
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
not_skip = "__init__.py"
filter_files = true

known_first_party = "src"
known_third_party = [
    "pytest",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
